# CUnit-template

./: CMakeLists.txt  main.c  utils.c  utils.h
suites/: CMakeLists.txt  Makefile  cmake_install.cmake  suite1.c
